testsuite/tests/properties/invalid_enum_nodes/test.out
== bad_alt.lkt ==
bad_alt.lkt:5:24: error: no such alternative
5 |         case _: OpKind.Baz => 1
  |                        ^^^


== correct.lkt ==
Code generation was successful

== not_enum_node.lkt ==
not_enum_node.lkt:5:17: error: base enum node expected
5 |         case _: Example.Foo => 1
  |                 ^^^^^^^


== not_node.lkt ==
not_node.lkt:5:17: error: base enum node expected
5 |         case _: Int.Foo => 1
  |                 ^^^


lkt_compile: Done
